# CS-6263-LLM-for-text-generation

./: README.md  pyproject.toml  report.md  requirements.txt
src/llmftg/: __init__.py  __main__.py  cli.py  llm.py
src/llmftg/resources/: accelerate_config.yaml  ds_config.json
