[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llmftg"
version = "1.0.0"
authors = [
  { name="Dylan Manuel" },
]
description = "Python package showing the usage of Large Language Models (LLMs) for text/code generative purposes using PyTorch and Hugging Face."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "typer[all]>=0.9.0"
]

[project.urls]
"Homepage" = "https://github.com/dmanuel64/LLM-for-text-generation"
"Bug Tracker" = "https://github.com/dmanuel64/LLM-for-text-generation/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = [
  "src"
]
testpaths = [
    "tests"
]