[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llmftg"
version = "1.0.0"
authors = [
  { name="Dylan Manuel" },
]
description = "Python package showing the usage of Large Language Models (LLMs) for text/code generative purposes using PyTorch and Hugging Face."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "bert-score>=0.3.13",
    "datasets>=2.18.0",
    "peft>=0.9.0",
    "rouge>=1.0.1",
    "transformers[torch,deepspeed]==4.36.2",
    "trl>=0.8.1",
    "typer[all]>=0.9.0"
]

[project.urls]
"Homepage" = "https://github.com/dmanuel64/LLM-for-text-generation"
"Bug Tracker" = "https://github.com/dmanuel64/LLM-for-text-generation/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = [
  "src"
]
testpaths = [
    "tests"
]